Working with mvn clean javafx:run and jlink