@@ -12,8 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>17.0.9</javafx.version>
-        <javafx.path>javafx-sdk-17.0.9/lib</javafx.path>
+        <javafx.version>17.0.8</javafx.version>
     </properties>
 
     <dependencies>
@@ -48,12 +47,6 @@
                 </executions>
                 <configuration>
                     <mainClass>kun.FileShareClient</mainClass>
-                    <options>
-                        <arg>--module-path</arg>
-                        <arg>${javafx.path}</arg>
-                        <arg>--add-modules</arg>
-                        <arg>javafx.controls,javafx.fxml,kun</arg>
-                    </options>
                     <launcher>P2PClient</launcher>
                 </configuration>
             </plugin>
@@ -74,28 +67,20 @@
                             <launcher>
                                 P2PClient=kun.FileShareClient
                             </launcher>
-                            <modulePaths>
-                                <!-- Add the path to your additional modules -->
-                                <modulePath>${javafx.path}</modulePath>
-                            </modulePaths>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
 
-<!-- Maven Compiler Plugin -->
+            <!--Maven CompilerPlugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
                     <release>17</release>
-                    <compilerArgs>
-                        <arg>--module-path</arg>
-                        <arg>${javafx.path}</arg>
-                        <arg>--add-modules</arg>
-                        <arg>javafx.controls,javafx.fxml,kun</arg>
-                    </compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
